--- a/enlaces-imágenes/enlace.html
+++ b/enlaces-imágenes/enlace.html
@@ -7,6 +7,28 @@
     <title>enlaces</title>
 </head>
 <body>
+
+    <h1>Enlaces HTML </h1> <hr>
+    <h2>navegando por páginas externas</h2>
+<!-- anchor -elementos linea- se posicionan uno al lado del otro -->
+    <a href="https://www.youtube.com/"> ir a YouTube </a>
+    <a href="https://www.youtube.com/"> ir a YouTube 2</a>
+
+<!-- párrafo -elementos bloque- se posicionan uno debajo del otro -->
+    <p>hola</p>
+    <p>hola hola </p>
+    <hr>
+    <h2>navegando por documentos HTML de nuestro proyecto</h2>
     
+    <a href="./index.html">Ir a Index</a><br>
+    <a href="./contacto/">Ir a Contactos</a><br>
+    <a href="./contacto/index.html">Ir a Contactos2</a><br>
+
+    <!-- se utiliza en el href: ./ para referenciar la carpeta en la que se encuentra uno
+    se utiliza en el href: ../ para referenciar la carpeta anterior a en la que se encuentra uno 
+    se utiliza en el href: ../../ se pueden usar varios para retroceder varios folders -->
+
+    <a href="#">misma página</a><br> <!--redirecciona a la misma página -->
+    <a href="#" target="_blank"> misma página new tab</a><br> <!--redirecciona a la misma página -->
 </body>
 </html> 
