--- a/HTML/enlaces-imágenes/imagenes/imagenes.html
+++ b/HTML/enlaces-imágenes/imagenes/imagenes.html
@@ -9,6 +9,10 @@
     <!-- https://unsplash.com/es -->
     <!-- https://boxicons.com/ -->
     <!-- https://undraw.co/ -->
+    <p>webs útiles https://unsplash.com/es imágenes libres
+        https://boxicons.com/ iconos en svg libres
+        https://undraw.co/ imágenes SVG </p>
+    
     <h2a>Imágenes w</h2a
     <p>imagen con ruta online o Absoluta () </p>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4rUQw9O1QErQ5FmMhEK4XsLeKzDafkIjz9zQZxkQE&s" alt="" width="200">
